2004-05-16  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* tramp.el (tramp-completion-file-name-regexp-unified): Avoid
	matching filenames starting with "/:" -- those are reserved for
	file-name-non-special.

2004-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-process-one-action)
	(tramp-process-one-multi-action, tramp-wait-for-regexp)
	(tramp-wait-for-output): Throw away if process has died. Reported
	by Luc Teirlinck <teirllm@dms.auburn.edu>.

2004-05-12  Kai Grossjohann  <kgrossjo@eu.uu.net>

	* tramp.el (tramp-initial-commands): Add "unset HISTFILE"; this is
	not really necessary but seems to keep the shell history smaller
	in some cases.  It is no substitute for setting HISTFILE and
	HISTSIZE from tramp-open-connection-setup-interactive-shell,
	though.  Suggested by Luc Teirlinck.
	(tramp-open-connection-setup-interactive-shell): Export variables
	HISTFILE and HISTSIZE, do not just set them.  From Luc Teirlinck.

2004-05-02  Kai Grossjohann  <kgrossjo@eu.uu.net>

	Version 2.0.40 released.

2004-05-01  Michael Albinus  <michael.albinus@gmx.de>

	Suppress byte-compiler warnings were possible.

	* tramp.el (toplevel): Call of `byte-compiler-options' pacified.
	`directory-sep-char' set to not obsolete (we need it for XEmacs).
	Define `last-coding-system-used' in XEmacs case.  Pacify
	declarations of `backup-directory-alist',
	`bkup-backup-directory-info' and
	`tramp-save-PC-expand-many-files'.
	(tramp-feature-write-region-fix): Pacify funcall of
	`find-operation-coding-system'.
	(tramp-line-end-position): Pacify funcall of `line-end-position'
	and `point-at-eol'.
	(tramp-handle-dired-compress-file): Pacify funcall of
	`dired-remove-file'.
	(tramp-handle-find-backup-file-name): Pacify access to
	`tramp-backup-directory-alist' and
	`tramp-bkup-backup-directory-info'.
	(tramp-touch): `error' needs just one parameter if there is no
	string substitution.
	(tramp-bug): `tramp-backup-directory-alist',